--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,40 @@
-.project {
-    color: inherit;
-    text-decoration: none;
-    box-shadow: 0px 0px 5px #000;
-    display: inline-block;
-    padding: 1px 10px;
-    margin: 15px 7px;
-    background: #fff;
-    max-width: 300px;
+.projects {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
-.project:hover {
-    box-shadow: 0px 0px 10px #000;
+.project {
+    box-shadow: 0px 0px 5px #000;
+    display: inline-flex;
+    margin: 15px 7px;
+    background: #fff;
+    width: 350px;
+    height: 281px;
+}
+
+.project-description {
+    margin-left: 15px;
+    flex-grow: 1;
+    overflow: hidden;
+    overflow-y: auto;
+}
+
+.project-wide {
+    width: 850px;
 }
 
 body {
     background: #eee;
+}
+
+@media all and (max-width: 900px) {
+    .project {
+        flex-direction: column;
+        width: 500px;
+    }
+
+    .projects {
+        justify-content: center;
+    }
 }
