--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
     margin: 15px 7px;
     background: #fff;
     width: 350px;
-    height: 281px;
+    min-height: 281px;
 }
 
 .project-description {
@@ -24,6 +24,12 @@
     width: 850px;
 }
 
+.tag {
+    background: #0f0;
+    border-radius: 10px;
+    padding: 3px 7px;
+}
+
 body {
     background: #eee;
 }
@@ -32,6 +38,7 @@ body {
     .project {
         flex-direction: column;
         width: 500px;
+        min-height: 0px;
     }
 
     .projects {
