--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,34 @@ body {
     margin-top: 60px;
 }
 
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+/* Alert styles */
+.alert {
+    padding: 10px;
+    margin: 5px;
+    border-radius: 5px;
+}
+
+.alert.error {
+    background:#f00;
+    color: #fff;
+    box-shadow: 0px 0px 3px #f00;
+}
+
+.alert.info {
+    background:#08f;
+    color: #fff;
+    box-shadow: 0px 0px 3px #08f;
+}
+
 /* Projects page */
 .projects {
     display: flex;
@@ -46,6 +74,10 @@ body {
     .projects {
         justify-content: center;
     }
+
+    .project-picture {
+        width: 100%;
+    }
 }
 
 /* Nav bar */
@@ -57,6 +89,7 @@ nav {
     background: #f80;
     color: #fff;
     position: fixed;
+    box-shadow: 0px 0px 5px #000;
 }
 
 nav ul {
@@ -83,7 +116,12 @@ nav li.active {
     border-bottom: 5px solid #fff;
 }
 
-nav a {
-    color: inherit;
+nav a:hover {
     text-decoration: none;
+}
+
+/* Subtle footer */
+footer {
+    color: #555;
+    text-align: center;
 }
