Add rlg screen capture and project links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,6 @@ body {
 }
 
 a {
-    color: inherit;
     text-decoration: none;
 }
 
@@ -116,6 +115,10 @@ nav li.active {
     border-bottom: 5px solid #fff;
 }
 
+nav a {
+    color: inherit;
+}
+
 nav a:hover {
     text-decoration: none;
 }
@@ -124,4 +127,8 @@ nav a:hover {
 footer {
     color: #555;
     text-align: center;
+}
+
+footer a {
+    color: #555;
 }
