--- a/_layouts/notes.html
+++ b/_layouts/notes.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+sidebar: yes
 ---
 <div class="outer">
     <div class="sidebar">
@@ -9,6 +10,7 @@ layout: default
             </li>
         {% endfor %}
     </div>
+    <div class="shadow"></div>
     <div class="content">
         {{content}}
     </div>
