Add edit link toggle

--- a/_layouts/notes.html
+++ b/_layouts/notes.html
@@ -1,6 +1,5 @@
 ---
 layout: default
-sidebar: yes
 ---
 <div class="outer">
     <div class="sidebar">
@@ -12,6 +11,9 @@ sidebar: yes
     </div>
     <div class="shadow"></div>
     <div class="content">
+        <div class="align-right">
+            <a href="https://github.com/ryan3r/ryan3r.github.io/blob/master/_notes/{{page.title | slugify}}.md" class="edit">Edit on Github</a>
+        </div>
         {{content}}
     </div>
 </div>
