--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,6 @@ html {
 body {
     background: #eee;
     margin: 0px;
-    margin-top: 60px;
     height: calc(100% - 60px);
 }
 
@@ -96,17 +95,14 @@ a:hover {
 
 /* Nav bar */
 nav {
-    top: 0px;
-    left: 0px;
-    width: 100%;
     height: 50px;
     background: #f80;
     color: #fff;
-    position: fixed;
     box-shadow: 0px 0px 5px #000;
     z-index: 3;
     display: flex;
     align-items: center;
+    margin-bottom: 10px;
 }
 
 nav ul {
